<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/purple_dark">

    <TextView
        android:id="@+id/titleTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_usuario"
        android:textSize="26sp"
        android:textColor="@color/teal_light"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/teal_light"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/teal_light"
        app:boxCollapsedPaddingTop="10dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:hint="@string/nombre"
            android:textSize="16sp"
            android:textColorHint="@color/teal_light"
            android:textColor="@color/black"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/teal_light"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/teal_light"
        app:boxCollapsedPaddingTop="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:hint="@string/apellido"
            android:textSize="16sp"
            android:textColorHint="@color/teal_light"
            android:textColor="@color/black"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/teal_light"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/teal_light"
        app:boxCollapsedPaddingTop="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColorHint="@color/teal_light"
            android:textColor="@color/black"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/teal_light"
        app:boxBackgroundMode="filled"
        app:hintTextColor="@color/teal_light"
        app:boxCollapsedPaddingTop="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColorHint="@color/teal_light"
            android:textColor="@color/black"
            android:padding="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:backgroundTint="@color/teal_light"
        android:padding="12dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
